🔒 보안 강화: Supabase API 키 환경변수 분리

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+.env.*
+
+# Config files with sensitive data
+config.local.js
 
 # IDE files
 .vscode/
