--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ config.local.js
 config.prod.js
 secrets.js
 
+# Auto-generated config file (will be regenerated during build)
+config.js
+
 # IDE files
 .vscode/
 .idea/
